--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>دروس الاجتماعيات | ذ.نبيل</title>
-        <link rel="stylesheet" href="css/cnt.css">
+        <link rel="stylesheet" href="css/cnt1.css">
         <meta name="description" content="mo7tawa">
     <link rel="icon" href="logo/logo.jpg">
     <meta name="keywords" content="...mosa3id mohariq lba7th">
@@ -17,7 +17,190 @@
     <link rel="stylesheet" href="tcl/l-s/css1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<style></style>
+<style>
+    :root{
+
+    --primaryColor:#ff274b;
+    --secondaryColor:#f7bcf7;
+    --lightColor:#ffffff;
+    --bgColor:#171a1c;
+    --bgColor2:#22202a;
+    --padding:8%;
+    --color:rgb(255, 29, 93);
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+#search-thin-btn-A-33PO{
+    direction: rtl !important;
+
+}
+#tool-bar-st{
+    background-color:rgb(215 215 215) !important;
+    position: static;
+}
+#logo-img {
+    width: 250px;
+    height: 66px;
+    padding: 10px 0 0 0;
+    object-fit: cover;
+}
+.home{
+    width: 100%;
+    height: 300px;
+}
+.name{
+    width: 75%;
+    margin: auto;
+    height: 300px;
+    box-shadow: 3px 3px 5px rgba(83, 77, 77, 0.633),-3px -3px 5px rgba(83, 77, 77, 0.633);
+    border-radius: 0 5px;
+    margin-top: 45px;
+}
+.name h2{
+    font-weight: bold;
+    margin-right: 55px;
+    padding-top: 15px;
+}
+.name h2 u{
+    text-decoration: none;
+    border-bottom: 4px solid rgb(255, 29, 93);
+    border-radius: 0 0 10px 10px;
+    padding: 0 7px 8px 7px;
+}
+.name p{
+    margin-right: 14px;
+}
+#sign{
+    height: 70px;
+    margin-top: -18px;
+    margin-right: 60px;
+}
+.right img{
+    width: 200px;
+    height: auto;
+    float: left;
+    margin-top: -52px;
+    margin-left: 8px;
+    margin-right: 10px;
+    box-shadow: 0 3px 8px black,-0 0 0px transparent;
+}
+/*section 2 :*/
+.services{
+    width: 100%;
+    height: 300px;
+    direction: rtl;
+}
+.cardina{
+    width: 75%;
+    margin: auto;
+    height: 270px;
+    box-shadow: 3px 3px 5px rgb(130, 120, 120),-3px -3px 5px rgb(130, 120, 120);
+    border-radius: 0 5px;
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 5px;
+}
+.cardina span{
+    border: 1px solid var(--color);
+    background-color: var(--color);
+    padding: 1px 7px;
+    border-radius: 10px;
+    color: white;
+}
+.our1{
+    width: 25%;
+    margin-right: 7px;
+    height: 260px;
+    border-radius:0 5px;
+    box-shadow: 3px 3px 5px rgb(129, 123, 123),-3px -3px 5px rgb(129, 123, 123);
+}
+.our1 h1 u{
+    text-decoration: none;
+    border-bottom: 4px solid rgb(255, 29, 93);
+    border-radius: 0 0 10px 10px;
+    padding: 0 7px 0 7px;
+}
+.our2{
+    width: 25%;
+    height: 260px;
+    border-radius:0 5px;
+    box-shadow: 3px 3px 5px rgb(129, 123, 123),-3px -3px 5px rgb(129, 123, 123);
+
+}
+.our2 h1 u{
+    text-decoration: none;
+    border-bottom: 4px solid rgb(255, 29, 93);
+    border-radius: 0 0 10px 10px;
+    padding: 0 7px 0 7px;
+}
+.our3{
+    width: 25%;
+    margin-left: 7px;
+    height: 260px;
+    border-radius: 0 5px;
+    box-shadow: 3px 3px 5px rgb(129, 123, 123),-3px -3px 5px rgb(129, 123, 123);
+}
+.our3 h1 u{
+    text-decoration: none;
+    border-bottom: 4px solid rgb(255, 29, 93);
+    border-radius: 0 0 10px 10px;
+    padding: 0 7px 0 7px;
+}
+.footer{
+    width: 75%;
+    margin: auto;
+    background-color: rgb(235, 229, 229);
+    padding: 10px;
+    border-radius: 42px 42px 0 0;
+    box-shadow: -4px -4px 12px rgb(163, 159, 159);
+}
+.copy{
+    text-align: center;
+    letter-spacing: 2px;
+}
+.copy i:hover{
+    color: blue;
+    transform: scale(1.3);
+    cursor: pointer;
+}
+#wsite:hover{
+    transform: scale(2);
+    text-decoration: underline wavy;
+}
+#contact:hover{
+    transform: scale(2);
+    text-decoration: underline wavy;
+}
+@media only screen and (max-width:1276px){
+    .our1 h1 u{
+    text-decoration: none;
+    border-bottom: 4px solid rgb(255, 29, 93);
+    border-radius: 0 0 10px 10px;
+    padding: 0 7px 3px 7px;
+    font-size: 30px;
+}
+    .our2 h1 u{
+
+    text-decoration: none;
+
+    border-bottom: 4px solid rgb(255, 29, 93);
+    border-radius: 0 0 10px 10px;
+    padding: 0 7px 3px 7px;
+    font-size: 30px;
+}
+    .our3 h1 u{
+    text-decoration: none;
+    border-bottom: 4px solid rgb(255, 29, 93);
+    border-radius: 0 0 10px 10px;
+    padding: 0 7px 3px 7px;
+    font-size: 30px;
+}
+}
+</style>
 </head>
 <body>
    <!---------------------------------------->
@@ -143,7 +326,7 @@
    <!--section 3 :-->
    <section class="footer" dir="rtl">
     <div class="copy">
-    <span>جميع الحقوق محفوظة <span id="wsite" style="color: #ff27db;font-weight:500;font-size: 15px;cursor: pointer;">Nabil-Udic-HG</span></span>
+    <span>جميع الحقوق محفوظة © <span id="wsite" style="color: #ff27db;font-weight:500;font-size: 15px;cursor: pointer;">Nabil-Udic-HG</span></span>
      &nbsp;<span id="contact" style="color: blue;cursor: pointer;">للتواصل</span>
       <i class="fa fa-facebook"></i>&nbsp;&nbsp;
      <i class="fa fa-instagram" aria-hidden="true"></i>&nbsp;&nbsp;
