--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
+
 <html>
+
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>دروس الاجتماعيات | ذ.نبيل</title>
-        <link rel="stylesheet" href="css/cnt1.css">
+        <link rel="stylesheet" href="css/cnt.css">
         <meta name="description" content="mo7tawa">
     <link rel="icon" href="logo/logo.jpg">
     <meta name="keywords" content="...mosa3id mohariq lba7th">
 
     <!--PROF-->
-    <link rel="stylesheet" href="tcl/l-b/css/style.css">
-    <link rel="stylesheet" href="tcl/l-b/css/css2.css">
-    <link rel="stylesheet" href="tcl/l-b/css/css3.css">
-    <link rel="stylesheet" href="tcl/l-b/css/css4.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css2.css">
+    <link rel="stylesheet" href="css3.css">
+    <link rel="stylesheet" href="css4.css">
     <!--PRPF-->
     <link rel="stylesheet" href="tcl/l-s/css1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <style>
     :root{
+
+
 
     --primaryColor:#ff274b;
     --secondaryColor:#f7bcf7;
@@ -206,7 +210,7 @@
    <!---------------------------------------->
    <nav class="navbar bg-light fixed-top" id="tool-bar-st">
     <div class="container-fluid">
-      <img id="logo-img" src="logo/logo.png" alt="Nabil-Udic-HG">
+      <img id="logo-img" src="logo.png" alt="Nabil-Udic-HG">
       <button title="قائمة الدروس" class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -277,14 +281,14 @@
     <div class="name">
     <h2><u>نبيل<span style="color: #ff274b;"> البرني</span></u></h2>
     <div class="right">
-    <img src="img/sam.jpg" alt="Nabil-Udic-HG">
+    <img src="sam.jpg" alt="Nabil-Udic-HG">
     </div>
     <br>
     <p><strong>المهنة : </strong>أستاذ</p>
     <p><strong>المادة : </strong>الاجتماعيات</p>
     <p><strong>مكان التدريس :</strong> سلوان الحساني</p>
     <p><strong>التوقيع : </strong></p>
-    <span><img id="sign" src="sign/sign.png"></span>
+    <span><img id="sign" src="sign.png"></span>
 
     </div>
    </section>
@@ -336,13 +340,14 @@
    <!----------------End------------------------>
 
 <!-- PROF -->
-<script src="bac1/l-b/js/js2.js"></script>
-<script src="bac1/l-b/js/js3.js"></script>
-<script src="bac1/l-b/js/js4.js"></script>
-<script src="bac1/l-b/js/jscript.js"></script>
+<script src="js2.js"></script>
+<script src="js/js3.js"></script>
+<script src="js4.js"></script>
+<script src="jscript.js"></script>
 <!--PROF-->
 <script src="bac1/l-s js offl/soci.js"></script>
 <script src="bac2/l-s js offl/soci.js"></script>
 <script src="tcl/l-s js offl/soci.js"></script>
+
 </body>
 </html>
